<resources>
    <string name="app_name">Waka Movie</string>
    <string name="thieu_nhi">Thiếu nhi</string>
    <string name="khac">Khác</string>
    <string name="danh_muc">Danh mục</string>
    <string name="bang_xep_hang">Bảng xếp hạng</string>
    <string name="moi_nhat">Mới nhất</string>
    <string name="tat_ca">Tất cả</string>
    <string name="da_hoan_thanh">Đã hoàn thành</string>
    <string name="truyen_kieu_moi">Truyện kiểu mới</string>
    <string name="noi_dung_vua_xem">Nội dung vừa xem</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="tu_truyen">Tủ truyện</string>
    <string name="phim_tuong_tu">Phim tương tự</string>
    <string name="dien_vien">Diễn Viên</string>
    <string name="search">Tìm kiếm</string>
    <string name="theloai">Thể loại</string>
    <string name="duoc_yeu_thich">Được yêu thích</string>
    <string name="phim_chieu_rap">Phim chiếu rạp</string>
    <string name="danh_gia_cao">Đánh giá cao</string>
    <string name="error_lost_internet">Không có kết nối mạng</string>
    <string name="error_server_message">Lỗi kết nối đến máy chủ</string>
    <string name="error_request_timeout">Quá thời gian yêu cầu</string>
    <string name="error_some_thing_wrong">Xảy ra lỗi vui lòng thử lại</string>
</resources>