<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:paddingVertical="10dp"
    android:background="@color/bg_topic"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/llTrangChu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/btnTrangChu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trang_chu"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/btnTrangChuCheck"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trang_chu_check"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvTrangChu"
            android:textColor="@color/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trang_chu"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTruyenKieuMoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/btnTimKiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/btnTimKiemCheck"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_check"
            android:layout_gravity="center"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tvTruyenKieuMoi"
            android:textColor="@color/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTuTruyen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/btnTuTruyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tu_truyen"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/btnTuTruyenCheck"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tu_truyen_check"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvTuTruyen"
            android:textColor="@color/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bang_xep_hang"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>