<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/tool_bar"
                android:id="@+id/toolBar"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:layout_width="match_parent"
                android:layout_height="223dp">
                <androidx.viewpager2.widget.ViewPager2
                    android:background="@drawable/bg_hoan_thanh_vang"
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_chu_de_xam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/btnMoiNhat"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/danh_muc"
                        android:textSize="18sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/moi_nhat"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tat_ca"
                        android:textColor="@color/tat_ca"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rycFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_truyen"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_chu_de_xam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/btnDaHoanThanh"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/danh_muc"
                        android:textSize="18sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/duoc_yeu_thich"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tat_ca"
                        android:textColor="@color/tat_ca"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rycPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_truyen"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_chu_de_xam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/btnTimKiem"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/danh_muc"
                        android:textSize="18sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/phim_chieu_rap"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tat_ca"
                        android:textColor="@color/tat_ca"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rycUpComing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_truyen"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_chu_de_xam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/btnNoiDungVuaXem"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/danh_muc"
                        android:textSize="18sp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/danh_gia_cao"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tat_ca"
                        android:textColor="@color/tat_ca"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rycTopRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_truyen"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>